fix logo width on iphone 5/se

--- a/src/logo.scss
+++ b/src/logo.scss
@@ -7,8 +7,15 @@
     }
 
     &__name {
+        img{
+            max-width:100%;
+        }
+        
     }
 
     &__slogan {
+        img{
+            max-width:100%;
+        }
     }
 }
